finished display details

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div id="mealNames">
 
     </div>
+    <div id="mealdetails">
+        
+    </div>
     <script src="app.js">
 
     </script>
