--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         <input id="input-area" type="text"  placeholder="search for meal">
         <button onclick="inputHandler()" id="search-button">search</button>
     </div>
+   <section id="mealArea">
     <div id="mealNames">
     </div>
     <div id="mealdetails">
     </div>
+   </section>
     <script src="app.js">
     </script>
 </body>
